Moved generic stuff out of bash_profile etc. to profile. Now bash_profile has bash specific stuff only

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-A list of my dotfiles - used on Mac OS X
+A list of my dotfiles - used on Mac OS X.
+Create appropriate symlinks to these files to use them.
